# contacts_app

./: .gitignore  README.MD
api_tester/: Cargo.toml  generated.json
api_tester/src/: lib.rs  main.rs
app/: Cargo.toml  Trunk.toml  build.fish  generated.json  index.html  tailwind.config.js
app/src/: create_user.graphql  get_users.graphql  graphql.rs  input.rs  main.rs  shared.rs  table.rs  temp.rs
app/src/components/: app.rs  contact.rs  contact_list.rs  contact_list_helper.rs  create.rs  create_contact.rs  edit.rs  edit_contact.rs  form.rs  icon.rs  list.rs  mod.rs  msg_ctx.rs  root.rs  search.rs  trashcan.rs
app/src/old/: contact_list.rs  contact_list_helper.rs  create_contact.rs  edit_contact.rs  favorites.rs  trashcan.rs
app/tailwind/: help.txt  tailwind.css
server/: .env  Cargo.toml  Rocket.toml  create_acc.html  docker-compose.yaml  index.html  redo.fish
server/migrations/1_addresses/: down.sql  up.sql
server/migrations/2022-07-11-144956_create_users/: up.sql
server/migrations/2022-07-11-210512_create_contacts/: down.sql  up.sql
server/migrations/2022-07-11-211303_create_auth_info/: down.sql  up.sql
server/migrations/2022-07-12-192359_create_contacts/: down.sql  up.sql
server/migrations/2_create_people/: down.sql  up.sql
server/migrations/3_emails/: down.sql  up.sql
server/migrations/4_phone_numbers/: down.sql  up.sql
server/src/: main.rs  models.rs  routes.rs  schema.rs
server/src/crud/: shared.rs
server/src/crud/create/: create.rs  create_helper.rs  create_route.rs  mod.rs
server/src/crud/delete/: delete_route.rs  mod.rs
server/src/crud/read/: mod.rs  read.rs  read_route.rs
server/src/crud/update/: mod.rs  update.rs  update_helper.rs  update_route.rs
server/src/helper/: mod.rs  read.rs  shared.rs
server/src/routes/: app.rs  create.rs  delete.rs  mod.rs  read.rs  update.rs
