[package]
name = "app"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
yew-hooks = "0.1.56"
titlecase = "2.0.0"
js-sys = "0.3"
serde = "1"
reqwest = { version = "0.11.7", features = ["json"] }
wasm-bindgen = "0.2"
#wee_alloc = "0.4.5"

[dependencies.web-sys]
version = "0.3"
features = ["Window"]

[dev-dependencies]
wasm-bindgen-test = "0.3.14"

[dev-dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "HtmlCollection",
]
